[package]
name = "servers"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
common = { git = "https://github.com/Cpp-enjoyers/common.git" }
compression = { git = "https://github.com/Cpp-enjoyers/compression_lib.git" }
bincode = { version = "2.0.0-rc", features = ["serde"] }
log = { version = "0.4.25" }
crossbeam-channel = "0.5"
itertools = "0.14.0"
petgraph = "0.7.1"
serde = "1.0"
ap2024_unitn_cppenjoyers_drone = { git = "https://github.com/Cpp-enjoyers/drone.git" }

[dev-dependencies]
env_logger = "0.11.6"
web_client = { git = "https://github.com/Cpp-enjoyers/web_client.git" }
ap2024_unitn_cppenjoyers_drone = { git = "https://github.com/Cpp-enjoyers/drone.git" }
